--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,14 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
-
-    <base-config cleartextTrafficPermitted="true">
-        <trust-anchors>
-            <certificates src="system" />
-        </trust-anchors>
-    </base-config>
-
-    <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">http://95.154.196.18</domain>
-        <domain includeSubdomains="true">http://95.154.196.18:6483/</domain>
-    </domain-config>
+    <base-config cleartextTrafficPermitted="false"></base-config>
 </network-security-config>
